--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=FlingBlogs
-spring.datasource.url=jdbc:mysql://localhost:3316/flingblogs?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/flingblog?useSSL=false&serverTimezone=UTC
+spring.datasource.username=flingbloger
+spring.datasource.password=flingbloger
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
